--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,30 +4,30 @@
 
 ## Files
 
-README.md @CBID2 @Anmol-Baranwal @rupali-codes @aftabrehan
-.gitignore @CBID2 @Anmol-Baranwal @rupali-codes @aftabrehan
-LICENSE @rupali-codes @CBID2 @Anmol-Baranwal @aftabrehan
-.github/workflows/ @rupali-codes @CBID2 @Anmol-Baranwal
-app/ @rupali-codes  @Anmol-Baranwal @aftabrehan
-components/ @Anmol-Baranwal @CBID2 @rupali-codes @aftabrehan
-lib/ @CBID2 @rupali-codes @Anmol-Baranwal @aftabrehan
-tests/ @rupali-codes @CBID2 @Anmol-Baranwal @aftabrehan
+README.md @CBID2 @rupali-codes
+.gitignore @CBID2 @rupali-codes
+LICENSE @rupali-codes @CBID2
+.github/workflows/ @rupali-codes @CBID2
+app/ @rupali-codes 
+components/ @CBID2 @rupali-codes
+lib/ @CBID2 @rupali-codes
+tests/ @rupali-codes @CBID2
 
 ## Directories
 
-.github/ @rupali-codes @CBID2 @Anmol-Baranwal @aftabrehan
-node_modules/ @rupali-codes @Anmol-Baranwal @aftabrehan
-public/ @CBID2 @rupali-codes @Anmol-Baranwal @aftabrehan
-.env/ @rupali-codes @Anmol-Baranwal @CBID2 @aftabrehan
+.github/ @rupali-codes @CBID2
+node_modules/ @rupali-codes
+public/ @CBID2 @rupali-codes
+.env/ @rupali-codes @CBID2
 
 ## Special cases
 
-# Any changes to the CODEOWNERS file must be approved by @rupali-codes @Anmol-Baranwal @CBID2 @aftabrehan
+# Any changes to the CODEOWNERS file must be approved by @rupali-codes @CBID2
 
-# Any changes to the .gitattributes file must be approved by @rupali-codes @CBID2 @Anmol-Baranwal @aftabrehan
+# Any changes to the .gitattributes file must be approved by @rupali-codes @CBID2
 
-# Any changes to the .gitignore file must be approved by @CBID2 @Anmol-Baranwal  @rupali-codes @aftabrehan
+# Any changes to the .gitignore file must be approved by @CBID2  @rupali-codes
 
 ## Contact information
 
-# If you have any questions about the CODEOWNERS file, please contact @rupali-codes @Anmol-Baranwal @CBID2 @aftabrehan
+# If you have any questions about the CODEOWNERS file, please contact @rupali-codes @CBID2
